--- a/iDocShare_src/iDocShareDist/Classes/LoginPopupViewController.xib
+++ b/iDocShare_src/iDocShareDist/Classes/LoginPopupViewController.xib
@@ -38,7 +38,7 @@
                     <rect key="frame" x="17" y="61" width="60" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login Code:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="b7Y-MX-xlR">
@@ -51,7 +51,7 @@
                     <rect key="frame" x="119" y="104" width="146" height="35"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                    <textInputTraits key="textInputTraits"/>
+                    <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                     <connections>
                         <action selector="loginCodePressReturn:" destination="-1" eventType="editingDidEndOnExit" id="yAD-Sf-m9t"/>
                     </connections>
@@ -72,6 +72,13 @@
                     <state key="normal" title="Cancel"/>
                     <connections>
                         <action selector="cancelLogin:" destination="-1" eventType="touchDown" id="1uT-oD-PVJ"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="ZHX-ae-5bp">
+                    <rect key="frame" x="74" y="44" width="205" height="56"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <connections>
+                        <action selector="selectServerName:" destination="-1" eventType="touchDown" id="Zod-BZ-URX"/>
                     </connections>
                 </button>
             </subviews>
